# AgentTerm

./: .gitignore  README.md  agent_term.py  config.json  example.py  fastapi_test.ipynb  main.py  pyproject.toml  run_agent.sh  run_fastapi_server.sh  screenshot_tool.py  trace_notebook.ipynb
agents/: BasicChatbotAgent.py  LiveAgent.py  agent_gen.py  base_agent.py  basic_gen.py  crawl.py  live_agent.py
app/: main.py
app/agents/: BasicChatbotAgent.py  base_agent.py  crawlAgent.py  extented_agent_system_examples.txt
app/config/: llm_config.py
app/routers/: chatbot_router.py
dev/: adscheduler_test.py
docs/: agent_system.md
tests/: test_main.py
